syntax = "proto3";

package deltaflight;

import "arrow/flight/protocol/flight.proto";

service DeltaFlightService {
    rpc CreateTable(TableCreateRequest) returns (TableCreateResponse);
    rpc DoGet(arrow.flight.protocol.Ticket) returns (stream arrow.flight.protocol.FlightData);
    rpc DoPut(stream arrow.flight.protocol.FlightData) returns (arrow.flight.protocol.PutResult);
    rpc ListTables(ListTablesRequest) returns (ListTablesResponse);
    rpc GetTableInfo(TableInfoRequest) returns (TableInfoResponse);
}

message TableCreateRequest {
    string table_path = 1;
    repeated ColumnSchema columns =2;
}

message ColumnSchema {
    string name = 1;
    string data_type = 2;
    bool nullable = 3;
}

message TableCreateResponse {
    bool success = 1;
    string message = 2;
}

message ListTablesRequest {
// Optional filter patterns
optional string pattern = 1;
}

message ListTablesResponse {
repeated string table_paths = 1;
}

message TableInfoRequest {
    string table_path = 1;
}
  
message TableInfoResponse {
    string table_path = 1;
    int64 version = 2;
    string created_at = 3;
    optional string table_name = 4;
    optional string description = 5;
    map<string, string> properties = 6;
    optional TableSchema schema = 7;  // Add schema as a dedicated field
}

message TableSchema {
    int32 field_count = 1;
    repeated SchemaField fields = 2;
}

message SchemaField {
    string name = 1;
    string data_type = 2;
    bool nullable = 3;
}